--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>MY FIRST WEBSITE</h1>
+    <H3><em>Learn to Code</em><strong>fast</strong></H3>
+    <hr>
+    <p>This is my first website and these are what <br> intend to achieve at the end of this training:</p>
+<ul>
+    <li>build a professional website</li>
+    <li>make new friends</li>
+    <li>be among the best</li>
+    <li>get a good job while I enjoy coding</li>
+</ul>
+
 </body>
 </html>
