--- a/Home.html
+++ b/Home.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <img src="C:\Users\USER\Downloads\emma pix.jpg" alt="emmanuel onyejekwe">
-    <h1>MY FIRST WEBSITE</h1>
-    <H3><em>Learn to Code</em> <strong>fast</strong></H3>
+    <table cellspacing="25">
+        <tr>
+            <td> <img src="C:\Users\USER\Downloads\emmy-modified (1).png" alt="emmanuel onyejekwe"></td>
+            <td> <h1>MY FIRST WEBSITE</h1><br> <p><em>Learn to Code</em> <strong>fast</strong></p></td>
+        </tr>
+    </table>
+   
+
     <hr>
+    <H2>INTRODUCTION</H2>
     <p>This is my first website and these are what <br> I intend to achieve at the end of this training:</p>
 <ul>
     <li>build a professional website</li>
@@ -18,8 +25,25 @@
     <li>be among the best</li>
     <li>get a good job while I enjoy coding</li>
     <li>get my friends subscribe to my  <a href="My Channel.html"><em>Youtube Channel</em></a> </li>
-</ul><hr size="3">
-<H2>Contact</H2>
+</ul>
+<hr size="3">
+
+
+<H2>CONTACT</H2>
 <p>For more enquiries, contact us through our <a href="Contact.html">hotline and email address</a> </p>
+<P>inice.emmy@gmail.com</P>
+<hr>
+
+<h1>SKILLS</h1>
+<table>
+    <tr>
+        <td><em>iOS Developer</em>  &#11088; &#11088; &#11088; &#11088;</td>
+        <td><em>Photography</em>  &#11088;&#11088;</td>
+    </tr>
+    <tr>
+        <td><em>Web Developer &#11088;&#11088;&#11088;&#11088;&#11088;</em></td>
+        <td><em>Cooking</em> &#11088;&#11088;&#11088;&#11088;</td>
+    </tr>
+</table>
 </body>
 </html>
